fixed toTop and scrollbar on About page

--- a/src/pages/About/About.module.css
+++ b/src/pages/About/About.module.css
@@ -12,9 +12,16 @@
   width: 100%;
   height: 100%;
   overflow-y: auto;
+  scrollbar-color: var(--uw-gold) transparent;
 }
 
-.pageContainer > div:nth-child(3) {
+.top {
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+.pageContainer > div:nth-child(4) {
   margin-top: 1rem;
 }
 .toTop {
